--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "encoding": "^0.1.13",
+    "graphql-request": "^6.1.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
